Fix alignment of login box

--- a/myclean/static/css/style.css
+++ b/myclean/static/css/style.css
@@ -224,8 +224,6 @@ footer {
 .login-box {
     height: 550px;
     width: 500px;
-    margin-left: auto;
-    margin-right: auto;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     margin-top: 10vh;
     border-radius: 22px;
